# lnn

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md
examples/data/: model_OR.lnn
libraries/lnn/: CMakeLists.txt
libraries/lnn/include/: NeuralNetwork.h  Neuron.h  NeuronInitializer.h
libraries/lnn/src/: NeuralNetwork.cpp  Neuron.cpp  NeuronInitializer.cpp
src/: main.cpp
